--- a/STM32_F750_test/STM32_F750_test.ioc
+++ b/STM32_F750_test/STM32_F750_test.ioc
@@ -4,28 +4,46 @@ CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=ART_ACCLERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache
 CORTEX_M7.PREFETCH_ENABLE=1
+Dma.Request0=USART6_TX
+Dma.RequestsNb=1
+Dma.USART6_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.0.Instance=DMA2_Stream6
+Dma.USART6_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.0.Mode=DMA_NORMAL
+Dma.USART6_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART6
+Mcu.IPNb=6
 Mcu.Name=STM32F750N8Hx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PA14
 Mcu.Pin1=PA13
 Mcu.Pin2=PI1
 Mcu.Pin3=PI11
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.PinsNb=5
+Mcu.Pin4=PC8
+Mcu.Pin5=PC7
+Mcu.Pin6=PC6
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F750N8Hx
 MxCube.Version=5.2.0
 MxDb.Version=DB.5.0.20
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA2_Stream6_IRQn=true\:0\:4\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:0\:3\:true\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -35,11 +53,20 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USART6_IRQn=true\:0\:4\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PC6.Locked=true
+PC6.Mode=Synchronous
+PC6.Signal=USART6_TX
+PC7.Locked=true
+PC7.Mode=Synchronous
+PC7.Signal=USART6_RX
+PC8.Mode=Synchronous
+PC8.Signal=USART6_CK
 PCC.Checker=false
 PCC.Line=STM32F7x0 Value line
 PCC.MCU=STM32F750N8Hx
@@ -88,7 +115,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART6_Init-USART6-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -150,6 +177,8 @@ RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
+USART6.IPParameters=VirtualMode-Synchronous
+USART6.VirtualMode-Synchronous=VM_SYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
