--- a/STM32_F750_test/STM32_F750_test.ioc
+++ b/STM32_F750_test/STM32_F750_test.ioc
@@ -22,25 +22,32 @@ Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
 Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=USART6
-Mcu.IPNb=8
+Mcu.IP3=QUADSPI
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=USART6
+Mcu.IPNb=9
 Mcu.Name=STM32F750N8Hx
 Mcu.Package=TFBGA216
-Mcu.Pin0=PA14
-Mcu.Pin1=PA13
-Mcu.Pin2=PI1
-Mcu.Pin3=PI11
-Mcu.Pin4=PC8
-Mcu.Pin5=PC7
-Mcu.Pin6=PC6
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.Pin0=PE2
+Mcu.Pin1=PA14
+Mcu.Pin10=PD12
+Mcu.Pin11=PD13
+Mcu.Pin12=PD11
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PA13
+Mcu.Pin3=PB6
+Mcu.Pin4=PI1
+Mcu.Pin5=PI11
+Mcu.Pin6=PC8
+Mcu.Pin7=PC7
+Mcu.Pin8=PC6
+Mcu.Pin9=PB2
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F750N8Hx
@@ -55,6 +62,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.QUADSPI_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:2\:false\:false\:true\:true\:true
@@ -65,6 +73,11 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PB2.Mode=Single Bank 1
+PB2.Signal=QUADSPI_CLK
+PB6.Locked=true
+PB6.Mode=Single Bank 1
+PB6.Signal=QUADSPI_BK1_NCS
 PC6.Locked=true
 PC6.Mode=Synchronous
 PC6.Signal=USART6_TX
@@ -81,6 +94,18 @@ PCC.Seq0=0
 PCC.Series=STM32F7
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD11.Locked=true
+PD11.Mode=Single Bank 1
+PD11.Signal=QUADSPI_BK1_IO0
+PD12.Locked=true
+PD12.Mode=Single Bank 1
+PD12.Signal=QUADSPI_BK1_IO1
+PD13.Locked=true
+PD13.Mode=Single Bank 1
+PD13.Signal=QUADSPI_BK1_IO3
+PE2.Locked=true
+PE2.Mode=Single Bank 1
+PE2.Signal=QUADSPI_BK1_IO2
 PI1.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PI1.GPIO_Label=LED1
 PI1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -122,6 +147,12 @@ ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART6_Init-USART6-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_2_CYCLE
+QUADSPI.ClockPrescaler=2
+QUADSPI.FifoThreshold=4
+QUADSPI.FlashSize=0x1
+QUADSPI.IPParameters=ClockPrescaler,FifoThreshold,SampleShifting,ChipSelectHighTime,FlashSize
+QUADSPI.SampleShifting=QSPI_SAMPLE_SHIFTING_HALFCYCLE
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
